--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -36,7 +36,7 @@
                             <fieldset style="position: absolute; left: 5px;top: 343px ;height: 71px; width: 180px;;height:40px ; border-radius: 10px">
                                 <legend style="font-size: 10px; color: blue"><strong>Archivo Plano</strong></legend>
                                 <h:graphicImage value="CreandoIconosJar/archivoplanoNovedad.gif" style="position: absolute; top: 15px; left: 10px; width: 25px  ; height: 31px "/>
-                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 150px; height: 25px; font-size: 10px" value="Cargue De Novedades" actionListener="#{controlNovedad.recibir('Cargue De Novedades')}" action="Impresion"></p:commandButton>
+                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 150px; height: 25px; font-size: 10px" value="Cargue De Novedades" actionListener="#{controlNovedad.recibir('Cargue De Novedades')}" action="novedadPlano"></p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute; left: 210px;height: 250px; width: 205px; border-radius: 10px">
                                 <legend style="font-size: 10px; color: blue"><strong>Administracion De Tiempos</strong></legend>
@@ -77,7 +77,7 @@
                                 <p:commandButton style="position: absolute;top: 63px; left: 65px; width: 155px; height: 25px ;font-size: 10px" value="Cobro Incapacidades" actionListener="#{controlNovedad.recibir('Cobros Incapacidades')}" action="Impresion" ></p:commandButton>
                                 <p:commandButton style="position: absolute;top: 99px; left: 65px; width: 155px; height: 25px ;font-size: 10px" value="Cuotas Partes" actionListener="#{controlNovedad.recibir('Cuotas Partes')}" action="Impresion"></p:commandButton>
                             </fieldset>
-                                                            <p:commandButton style="position: absolute;top: 420px; left: 520px; width: 155px; height: 25px ;font-size: 10px" value="Salir" ></p:commandButton>
+                            <p:commandButton style="position: absolute;top: 420px; left: 520px; width: 155px; height: 25px ;font-size: 10px" value="Salir" action="nomina"></p:commandButton>
 
                         </p:panel>
                     </p:panel>
